# trade_game

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: linux_build.yml  windows_build.yml
entity/: Cargo.toml
entity/src/: assets.rs  events.rs  lib.rs  messages.rs  mod.rs  orders.rs  prelude.rs  price_snapshot.rs  trades.rs  user_balances.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/macros/: extract_or_http_err.rs  mod.rs  try_or_http_err.rs  unwrap_or_http_err.rs
src/routes/: change_password.rs  chat_history.rs  check_recover_code.rs  create_bot.rs  create_event.rs  get_bots.rs  get_chats.rs  get_events.rs  get_user_place.rs  login.rs  market.rs  market_buy.rs  market_sell.rs  mod.rs  order_buy.rs  order_cancel.rs  order_create.rs  order_sell.rs  prelude.rs  price_history.rs  private_chat.rs  recover_account.rs  refresh.rs  register.rs  top_users.rs  trades_history.rs  user_assets.rs  user_info.rs  user_orders.rs
src/structs/: mod.rs  order_structs.rs
src/traits/: redis.rs
src/utils/: establish_connection.rs  get_price.rs  init_assets.rs  jwt.rs  limited_list.rs  limited_list_with_timeout.rs  mod.rs  price_calculation.rs  prices_snapshot.rs  response.rs  seed_assets.rs  take_commission.rs
web_view/: package-lock.json  package.json
web_view/src/: App.css  App.tsx  main.tsx
