[package]
name = "trade_game"
authors = ["baldezh"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.9.0"
actix = "0.13.5"
actix-web-actors = "4.3.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5.3"
rand_core = "0.6"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
futures = "0.3.31"
redis = { version = "0.29.0", features = ["tokio-comp"] }

tracing-subscriber = "0.3.19"
tracing = "0.1.41"

entity = { path = "entity" }
migration = { path = "migration" }

utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }


[features]
docs = []

